--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,9 @@
+/* Center portfolio images */
+.portfolio-card img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 /* ============================================
    Mohtawa Website - Main Stylesheet
    Design System: Modern Tech-Forward Minimalism
@@ -744,7 +750,7 @@ section {
 }
 
 .team-member {
-  max-width: 250px;
+  max-width: 350px;
   text-align: center;
 }
 
@@ -787,7 +793,8 @@ section {
    Portfolio Section
    ============================================ */
 .portfolio {
-  background-color: white;
+  /*background-color: white;*/
+  background: none;
 }
 
 .portfolio-grid {
